# Cancionero

./: .gitignore  README.md  com.github.ravila4.Cancionero.json  meson.build
data/: com.github.ravila4.Cancionero.desktop.in  com.github.ravila4.Cancionero.gschema.xml  com.github.ravila4.Cancionero.metainfo.xml.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: ast.py  cancionero.gresource.xml  cancionero.in  main.py  meson.build  ug.py  window.py  window.ui
tests/: test_ug.py
